partiql/tests/snapshots/pretty__graph_selectors_6.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT p FROM g MATCH SHORTEST 5 GROUP p = (a WHERE a.owner='Dave') -[t:Transfer]-> * (b WHERE b.owner='Aretha')
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT p FROM g MATCH SHORTEST 5 GROUP p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))

------------------------------------------------------------------------------------------------------------------------
SELECT p FROM g MATCH SHORTEST 5 GROUP p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))

--------------------------------------------------------------------------------
SELECT p FROM g MATCH SHORTEST 5 GROUP
  p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))

----------------------------------------
SELECT p FROM g MATCH SHORTEST 5 GROUP
  p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))

------------------------------
SELECT p
FROM g MATCH SHORTEST 5 GROUP
  p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))

--------------------
SELECT p
FROM g MATCH SHORTEST 5 GROUP
  p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))

----------
SELECT p
FROM g MATCH SHORTEST 5 GROUP
  p = (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha'))
