partiql/tests/snapshots/pretty__graph_shapes_5.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT * FROM (g MATCH p = (x)-[e]->*(y)-[e2]-(z)  ONE ROW PER STEP ( y, e2, z ) IN ( p ) )
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH p = (x) -[e]->* (y) -[e2]- (z)
  ONE ROW PER STEP (y, e2, z) IN (p))

------------------------------------------------------------------------------------------------------------------------
SELECT * FROM (g MATCH p = (x) -[e]->* (y) -[e2]- (z)
  ONE ROW PER STEP (y, e2, z) IN (p))

--------------------------------------------------------------------------------
SELECT * FROM (g MATCH p = (x) -[e]->* (y) -[e2]- (z)
  ONE ROW PER STEP (y, e2, z) IN (p))

----------------------------------------
SELECT *
FROM (g MATCH p = (x) -[e]->* (y) -[e2]- (z)
  ONE ROW PER STEP (y, e2, z) IN (p))

------------------------------
SELECT *
FROM (g MATCH p = (x) -[e]->* (y) -[e2]- (z)
  ONE ROW PER STEP (y, e2, z)
  IN (p))

--------------------
SELECT *
FROM (g MATCH p = (x) -[e]->* (y) -[e2]- (z)
  ONE ROW PER STEP
  (y, e2, z) IN (p))

----------
SELECT *
FROM (g MATCH p = (x) -[e]->* (y) -[e2]- (z)
  ONE ROW PER STEP
  (y, e2,
  z) IN
  (p))
